--- a/css/style.css
+++ b/css/style.css
@@ -23,12 +23,29 @@ ol {
 
 img {
   display: block;
+  max-width: 100%;
+  height: auto;
 }
 .container {
-  width: 1158px;
-  padding-left: 15px;
-  padding-right: 15px;
+  width: 100%;
+  padding-left: 16px;
+  padding-right: 16px;
   margin: 0 auto;
+}
+@media screen and (min-width: 320px){
+  .container{
+    max-width: 320px;
+  }
+}
+@media screen and (min-width: 768px){
+  .container{
+    max-width: 768px;
+  }
+}
+@media screen and (min-width: 1158px){
+  .container{
+    max-width: 1158px;
+  }
 }
 .list {
   list-style: none;
@@ -227,20 +244,62 @@ img {
 
 /* =====FEATURES===== */
 .features {
-  padding-top: 120px;
-  padding-bottom: 120px;
+  padding-top: 96px;
+  padding-bottom: 96px;
 }
 .features-list {
   display: flex;
-  gap: 24px;
+  flex-direction: column;
+  gap: 72px;
 }
 .features-subtitle {
   color: #2e2f42;
-  font-size: 20px;
-  font-weight: 500;
+  font-size: 36px;
+  font-weight: 700;
   line-height: 1.2;
   letter-spacing: 0.02em;
   margin-bottom: 8px;
+  text-align: center;
+}
+
+.features-item {
+}
+.features-item-icons {
+  display: none;
+}
+.features-item-text {
+  color: #434455;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+}
+
+
+@media screen and (min-width: 768px){
+  .features-list{
+    flex-direction: row;
+    flex-wrap: wrap;
+      gap: 72px 24px;
+  }
+  .features-item {
+    width: calc((100% - 24px * 1) / 2);
+  }
+}
+@media screen and (min-width: 1158px){
+  .features {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+  .features-list {
+    gap: 24px;
+}
+.features-subtitle{
+  font-size: 20px;
+   font-weight: 500;
+}
+.features-item-text{
+  font-weight: 400;
 }
 .features-item {
   width: calc((100% - 24px * 3) / 4);
@@ -255,13 +314,6 @@ img {
   align-items: center;
   justify-content: center;
   margin-bottom: 8px;
-}
-.features-item-text {
-  color: #434455;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
 }
 /* ============== */
 
