--- a/css/style.css
+++ b/css/style.css
@@ -315,26 +315,30 @@ img {
   justify-content: center;
   margin-bottom: 8px;
 }
+}
 /* ============== */
 
 /* =====OUT TEAM===== */
 .team {
   background: #f4f4fd;
-  padding: 120px 0;
+  padding: 96px 0;
 }
 .team-list {
   display: flex;
-  gap: 24px;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 72px;
   border-radius: 0px 0px 4px 4px;
-  flex-basis: calc((100% - 3 * 24px) / 4);
 }
 .team-item {
+  max-width: 264px;
   background-color: #ffffff;
   border-radius: 0px 0px 4px 4px;
   box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
     0px 1px 1px 0px rgba(46, 47, 66, 0.16),
     0px 1px 6px 0px rgba(46, 47, 66, 0.08);
-  width: calc((100% - 24px * 3) / 4);
+
 }
 .team-item-name {
   padding: 32px 0;
@@ -402,6 +406,30 @@ img {
   letter-spacing: 0.02em;
   margin: 0;
 }
+@media screen and (min-width: 768px){
+  .team-list{
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 64px 24px;
+    flex-basis: calc((100% -  24px) / 2);
+  }
+  .team-item{
+    width: calc((100% - 24px ) / 2);
+  }
+}
+@media screen and (min-width: 1158px){
+  .team{
+    padding: 120px 0;
+  }
+  .team-list{
+    gap: 24px;
+    flex-basis: calc((100% - 3 * 24px) / 4);
+  }
+  .team-item{
+    width: calc((100% - 24px * 3) / 4);
+  }
+}
+
 /* ============ */
 
 /* =====OUR PORTFOLIO===== */
