--- a/css/style.css
+++ b/css/style.css
@@ -446,14 +446,17 @@ img {
 
 .portfolio {
   background-color: #fff;
-  padding: 120px 0;
+  padding: 96px 0;
 }
 
 .portfolio-list {
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   flex-wrap: wrap;
-  column-gap: 24px;
-  row-gap: 48px;
+  gap: 48px;
+
 }
 .portfolio-cover-wrap {
   position: relative;
@@ -495,7 +498,6 @@ img {
   border: 1px solid #e7e9fc;
   border-top: none;
   background: var(--WHITE, #fff);
-  width: calc((100%- 48px) / 3);
   padding: 32px 16px;
 }
 .portfolio-item-text {
@@ -505,9 +507,33 @@ img {
   letter-spacing: 0.02em;
 }
 .portfolio-item {
-  width: calc((100% - 48px) / 3);
   position: relative;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 768px){
+  .portfolio-list{
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 72px 24px;
+  }
+
+  .portfolio-item{
+    width: calc((100% - 24px) / 2);
+  }
+}
+@media screen and (min-width: 1158px){
+  .portfolio {
+    padding: 120px 0;
+  }
+  .portfolio-list{
+      column-gap: 24px;
+  row-gap: 48px;
+  }
+ 
+  .portfolio-item{
+    width: calc((100% - 48px) / 3);
+  }
 }
 
 /* ============ */
