--- a/css/style.css
+++ b/css/style.css
@@ -683,6 +683,7 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     justify-content: center;
     padding: 0 108px;
     gap: 72px 24px;
+    justify-content: flex-start;
   }
   .footer-container-logo{
     width: 264px;
@@ -690,9 +691,10 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   .footer-form{
     flex-direction: row;
   }
-  .footer-form-input{
+  .footer-form-input {
     width:264px;
   }
+ 
   .footer-from-label{
 width: auto;
   }
@@ -704,10 +706,14 @@ width: auto;
   }
   .footer-container{
     align-items: baseline;
-
+    padding: 0 15px;
+    flex-wrap: nowrap;
+    gap: 0;
   }
   .footer-form{
     gap: 24px;
+ 
+    
   }
   .footer-container-logo{
     margin-right: 120px;
