--- a/css/style.css
+++ b/css/style.css
@@ -192,30 +192,41 @@ img {
 
 /* =====FIRST SECTION===== */
 .solutions {
+  flex-direction: column;
   background-color: #2e2f42;
   background-image: linear-gradient(
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url(../images/people-office.jpg);
+    url(../images/hero-mob.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
   max-width: 1440px;
   margin: 0 auto;
-  padding: 188px 0;
+  padding: 72px 0;
+}
+  @media (min-resolution: 192dpi) {
+  .solutions {
+    background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/hero-mob-2x.jpg);
+  }
 }
 .solutions-title {
   color: #fff;
-  font-size: 56px;
+  font-size: 36px;
   font-weight: 700;
-  line-height: 1.07;
+  line-height: 1.2;
   letter-spacing: 0.02em;
   max-width: 496px;
   margin: 0 auto;
-  margin-bottom: 48px;
+  margin-bottom: 72px;
   text-align: center;
 }
+
 
 .solutions-btn {
   font-family: inherit;
@@ -239,6 +250,53 @@ img {
 .solutions-btn:hover,
 .solutions-btn:focus {
   background-color: #404bbf;
+}
+
+@media screen and (min-width: 768px){
+  .solutions{
+    padding: 113px 0;
+    background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/hero-tab.jpg);
+  }
+    @media (min-resolution: 192dpi) {
+  .solutions {
+    background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/hero-tab-2x.jpg);
+  }
+}
+  .solutions-title{
+    font-size: 56px;
+    line-height: 1.07;
+    margin-bottom: 36px;
+  }
+}
+@media screen and (min-width: 1158px){
+  .solutions{
+    padding: 188px 0;
+    background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/herobg.jpg);
+  }
+  @media (min-resolution: 192dpi) {
+    .solutions {
+      background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/herobg-2x.jpg);
+    }
+  }
+  .solutions-title{
+    margin-bottom: 48px;
+  }
 }
 /* ============== */
 
