--- a/css/style.css
+++ b/css/style.css
@@ -32,18 +32,18 @@ img {
   padding-right: 16px;
   margin: 0 auto;
 }
-@media screen and (min-width: 320px){
-  .container{
+@media screen and (min-width: 320px) {
+  .container {
     max-width: 320px;
   }
 }
-@media screen and (min-width: 768px){
-  .container{
+@media screen and (min-width: 768px) {
+  .container {
     max-width: 768px;
   }
 }
-@media screen and (min-width: 1158px){
-  .container{
+@media screen and (min-width: 1158px) {
+  .container {
     max-width: 1158px;
   }
 }
@@ -115,9 +115,20 @@ img {
 }
 .header-menu {
   display: none;
-  /* display: flex;
-  gap: 40px;
-  list-style: none; */
+}
+@media screen and (min-width: 768px){
+  .header-menu{
+    display: flex;
+    gap: 40px;
+    list-style: none;
+  }
+}
+@media screen and (min-width: 1158px){
+  .header-menu{
+    display: flex;
+    gap: 40px;
+    list-style: none;
+  }
 }
 
 .header-menu-link.current {
@@ -169,13 +180,30 @@ img {
 
 .contacts-menu {
   display: none;
-  /* list-style: none;
+}
+@media screen and (min-width: 768px){
+  .contacts-menu{
+    list-style: none;
   font-style: normal;
   align-items: center;
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 12px;
+  justify-content: flex-end;
+  }
+}
+@media screen and (min-width: 1158px){
+  .contacts-menu{
+    list-style: none;
+  font-style: normal;
+  align-items: center;
+  display: flex;
+  flex-direction: row;
   align-items: center;
   gap: 40px;
-  justify-content: flex-end; */
+  justify-content: flex-end;
+}
 }
 
 .contacts-link {
@@ -191,60 +219,70 @@ img {
 .contacts-link:focus {
   color: #404bbf;
 }
-.menu-open-btn{
-  border:none;
+.menu-open-btn {
+  border: none;
   background-color: transparent;
   padding: 0%;
 }
-.menu-open-svg{
+.menu-open-svg {
   display: flex;
   align-items: center;
   justify-content: center;
-  
 }
-.mob-menu{
+.mob-menu {
   position: fixed;
   z-index: 1;
   top: 0;
-  left:0;
+  left: 0;
   width: 100vw;
-height: 100vh;
-display: flex;
-flex-direction: column;
-justify-content: space-between;
-background-color: #FFF;
-padding: 24px 24px 40px 16px;
-
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: #fff;
+  padding: 24px 24px 40px 16px;
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
 }
+  .is-open{
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: auto;
+  }
+ 
+
 .mob-menu-btn {
   width: 24px;
   height: 24px;
   display: flex;
   align-items: center;
   justify-content: center;
-  top: 24px;
-  right: 24px;
   border-radius: 50%;
-  background-color: transparent; 
-  padding: 0%;
+  background-color: transparent;
   margin-left: auto;
   margin-bottom: 24px;
   background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   border: 1px solid rgba(0, 0, 0, 0.1);
   cursor: pointer;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
-  border 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.mob-menu-btn-icon { 
+.mob-menu-btn-icon {
   fill: #2e2f42;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.mob-menu-btn:hover,
+.mob-menu-btn:focus {
+  background-color: #404bbf;
+  border: none;
 }
 .mob-menu-list {
   margin-bottom: 40px;
 }
 
 .mob-menu-item:not(:last-child) {
-margin-bottom: 40px;
+  margin-bottom: 40px;
 }
 .mob-menu-link {
   display: block;
@@ -253,19 +291,14 @@ margin-bottom: 40px;
   font-weight: 700;
   line-height: 1.2;
   letter-spacing: 0.02em;
-  /* padding: 24px 0 24px; */
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-
-
-.mob-menu-link.current {
-  position: relative;
+.mob-menu-link:hover,
+.mob-menu-link:focus {
   color: #404bbf;
 }
-
 .mob-menu-contacts {
-
 }
 .mob-menu-contacts-item:not(:last-child) {
   margin-bottom: 24px;
@@ -280,13 +313,11 @@ margin-bottom: 40px;
   flex-direction: column;
   gap: 24px;
 }
-.mob-menu-contacts-link.current{
-  position: relative;
-  color: var(--IRIS, #4D5AE5);
+.mob-menu-contacts-link:hover,
+.mob-menu-contacts-link:focus {
+  color: #4d5ae5;
 }
-
 .mob-menu-icons-list {
-
   display: flex;
   align-items: center;
   gap: 40px;
@@ -312,6 +343,20 @@ margin-bottom: 40px;
   justify-content: center;
   fill: #f4f4fd;
 }
+@media screen and (min-width: 768px){
+  .menu-open-svg{
+    display: none;
+  }
+}
+@media screen and (min-width: 1158px){
+  .menu-open-svg{
+    display: none;
+  }
+}
+.mob-menu-icon-link:hover,
+.mob-menu-icon-link:focus {
+  background-color: #31d0aa;
+}
 
 /* ================ */
 
@@ -331,13 +376,13 @@ margin-bottom: 40px;
   margin: 0 auto;
   padding: 72px 0;
 }
-  @media (min-resolution: 192dpi) {
+@media (min-resolution: 192dpi) {
   .solutions {
     background-image: linear-gradient(
-      rgba(46, 47, 66, 0.7),
-      rgba(46, 47, 66, 0.7)
-    ),
-    url(../images/hero-mob-2x.jpg);
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/hero-mob-2x.jpg);
   }
 }
 .solutions-title {
@@ -351,7 +396,6 @@ margin-bottom: 40px;
   margin-bottom: 72px;
   text-align: center;
 }
-
 
 .solutions-btn {
   font-family: inherit;
@@ -377,49 +421,49 @@ margin-bottom: 40px;
   background-color: #404bbf;
 }
 
-@media screen and (min-width: 768px){
-  .solutions{
+@media screen and (min-width: 768px) {
+  .solutions {
     padding: 113px 0;
     background-image: linear-gradient(
-      rgba(46, 47, 66, 0.7),
-      rgba(46, 47, 66, 0.7)
-    ),
-    url(../images/hero-tab.jpg);
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/hero-tab.jpg);
   }
-    @media (min-resolution: 192dpi) {
-  .solutions {
-    background-image: linear-gradient(
-      rgba(46, 47, 66, 0.7),
-      rgba(46, 47, 66, 0.7)
-    ),
-    url(../images/hero-tab-2x.jpg);
+  @media (min-resolution: 192dpi) {
+    .solutions {
+      background-image: linear-gradient(
+          rgba(46, 47, 66, 0.7),
+          rgba(46, 47, 66, 0.7)
+        ),
+        url(../images/hero-tab-2x.jpg);
+    }
   }
-}
-  .solutions-title{
+  .solutions-title {
     font-size: 56px;
     line-height: 1.07;
     margin-bottom: 36px;
   }
 }
-@media screen and (min-width: 1158px){
-  .solutions{
+@media screen and (min-width: 1158px) {
+  .solutions {
     padding: 188px 0;
     background-image: linear-gradient(
-      rgba(46, 47, 66, 0.7),
-      rgba(46, 47, 66, 0.7)
-    ),
-    url(../images/herobg.jpg);
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/herobg.jpg);
   }
   @media (min-resolution: 192dpi) {
     .solutions {
       background-image: linear-gradient(
-        rgba(46, 47, 66, 0.7),
-        rgba(46, 47, 66, 0.7)
-      ),
-      url(../images/herobg-2x.jpg);
+          rgba(46, 47, 66, 0.7),
+          rgba(46, 47, 66, 0.7)
+        ),
+        url(../images/herobg-2x.jpg);
     }
   }
-  .solutions-title{
+  .solutions-title {
     margin-bottom: 48px;
   }
 }
@@ -458,46 +502,45 @@ margin-bottom: 40px;
   letter-spacing: 0.02em;
 }
 
-
-@media screen and (min-width: 768px){
-  .features-list{
+@media screen and (min-width: 768px) {
+  .features-list {
     flex-direction: row;
     flex-wrap: wrap;
-      gap: 72px 24px;
+    gap: 72px 24px;
   }
   .features-item {
     width: calc((100% - 24px * 1) / 2);
   }
 }
-@media screen and (min-width: 1158px){
+@media screen and (min-width: 1158px) {
   .features {
-  padding-top: 120px;
-  padding-bottom: 120px;
-}
+    padding-top: 120px;
+    padding-bottom: 120px;
+  }
   .features-list {
     gap: 24px;
-}
-.features-subtitle{
-  font-size: 20px;
-   font-weight: 500;
-}
-.features-item-text{
-  font-weight: 400;
-}
-.features-item {
-  width: calc((100% - 24px * 3) / 4);
-}
-.features-item-icons {
-  height: 112px;
-  flex-shrink: 0;
-  border-radius: 4px;
-  border: 1px solid var(--LIGHT-SLATE, #8e8f99);
-  background: var(--CLOUD, #f4f4fd);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-bottom: 8px;
-}
+  }
+  .features-subtitle {
+    font-size: 20px;
+    font-weight: 500;
+  }
+  .features-item-text {
+    font-weight: 400;
+  }
+  .features-item {
+    width: calc((100% - 24px * 3) / 4);
+  }
+  .features-item-icons {
+    height: 112px;
+    flex-shrink: 0;
+    border-radius: 4px;
+    border: 1px solid var(--LIGHT-SLATE, #8e8f99);
+    background: var(--CLOUD, #f4f4fd);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 8px;
+  }
 }
 /* ============== */
 
@@ -521,7 +564,6 @@ margin-bottom: 40px;
   box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
     0px 1px 1px 0px rgba(46, 47, 66, 0.16),
     0px 1px 6px 0px rgba(46, 47, 66, 0.08);
-
 }
 .team-item-name {
   padding: 32px 0;
@@ -589,26 +631,26 @@ margin-bottom: 40px;
   letter-spacing: 0.02em;
   margin: 0;
 }
-@media screen and (min-width: 768px){
-  .team-list{
+@media screen and (min-width: 768px) {
+  .team-list {
     flex-direction: row;
     flex-wrap: wrap;
     gap: 64px 24px;
-    flex-basis: calc((100% -  24px) / 2);
+    flex-basis: calc((100% - 24px) / 2);
   }
-  .team-item{
-    width: calc((100% - 24px ) / 2);
+  .team-item {
+    width: calc((100% - 24px) / 2);
   }
 }
-@media screen and (min-width: 1158px){
-  .team{
+@media screen and (min-width: 1158px) {
+  .team {
     padding: 120px 0;
   }
-  .team-list{
+  .team-list {
     gap: 24px;
     flex-basis: calc((100% - 3 * 24px) / 4);
   }
-  .team-item{
+  .team-item {
     width: calc((100% - 24px * 3) / 4);
   }
 }
@@ -639,7 +681,6 @@ margin-bottom: 40px;
   justify-content: center;
   flex-wrap: wrap;
   gap: 48px;
-
 }
 .portfolio-cover-wrap {
   position: relative;
@@ -694,27 +735,27 @@ margin-bottom: 40px;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-@media screen and (min-width: 768px){
-  .portfolio-list{
+@media screen and (min-width: 768px) {
+  .portfolio-list {
     flex-direction: row;
     flex-wrap: wrap;
     gap: 72px 24px;
   }
 
-  .portfolio-item{
+  .portfolio-item {
     width: calc((100% - 24px) / 2);
   }
 }
-@media screen and (min-width: 1158px){
+@media screen and (min-width: 1158px) {
   .portfolio {
     padding: 120px 0;
   }
-  .portfolio-list{
-      column-gap: 24px;
-  row-gap: 48px;
+  .portfolio-list {
+    column-gap: 24px;
+    row-gap: 48px;
   }
- 
-  .portfolio-item{
+
+  .portfolio-item {
     width: calc((100% - 48px) / 3);
   }
 }
@@ -733,7 +774,7 @@ margin-bottom: 40px;
   gap: 72px;
   text-align: center;
 }
-.footer-container-logo{
+.footer-container-logo {
   width: 100%;
 }
 .footer-logo {
@@ -762,7 +803,6 @@ margin-bottom: 40px;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-
 }
 
 .footer-text-icons {
@@ -781,7 +821,6 @@ margin-bottom: 40px;
   gap: 16px;
   justify-content: center;
   align-items: center;
- 
 }
 .footer-icons-item {
   width: 40px;
@@ -801,35 +840,34 @@ margin-bottom: 40px;
 .footer-icons-link:focus {
   background-color: #31d0aa;
 }
-.footer-form{
+.footer-form {
   display: flex;
   gap: 24px;
   flex-direction: column;
   align-items: center;
-  
 }
-.footer-form-input{
+.footer-form-input {
   width: 288px;
   height: 40px;
   border-radius: 4px;
-border: 1px solid var(--WHITE, #FFF);
-color: #FFF;
-font-size: 12px;
-line-height: 1.5;
-letter-spacing: 0.04em;
-box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-background-color: transparent;
-outline: transparent;
-padding: 0 16px;
-filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border: 1px solid var(--WHITE, #fff);
+  color: #fff;
+  font-size: 12px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  background-color: transparent;
+  outline: transparent;
+  padding: 0 16px;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
 }
-.footer-form-input::placeholder{
-  color: var(--WHITE, #FFF);
-font-size: 12px;
-line-height: 2;
-letter-spacing: 0.04em;
+.footer-form-input::placeholder {
+  color: var(--WHITE, #fff);
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
 }
-.footer-form-btn{
+.footer-form-btn {
   min-width: 165px;
   height: 40px;
   display: inline-flex;
@@ -838,28 +876,27 @@ letter-spacing: 0.04em;
   gap: 8px;
   padding: 8px 24px;
   border-radius: 4px;
-background: var(--IRIS, #4D5AE5);
-border: none;
-color: var(--WHITE, #FFF);
-text-align: center;
-font-size: 16px;
-font-weight: 500;
-line-height: 1.5;
-letter-spacing: 0.04em;
-cursor: pointer;
-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  background: var(--IRIS, #4d5ae5);
+  border: none;
+  color: var(--WHITE, #fff);
+  text-align: center;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.footer-btn-input{
+.footer-btn-input {
   margin-left: 16px;
 }
-
 
 .footer-form-btn:hover,
 .footer-form-btn:focus {
   background-color: #404bbf;
 }
-@media screen and (min-width: 768px){
-  .footer-container{
+@media screen and (min-width: 768px) {
+  .footer-container {
     flex-direction: row;
     flex-wrap: wrap;
     text-align: left;
@@ -868,54 +905,49 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     gap: 72px 24px;
     justify-content: flex-start;
   }
-  .footer-container-logo{
+  .footer-container-logo {
     width: 264px;
   }
-  .footer-form{
+  .footer-form {
     flex-direction: row;
   }
   .footer-form-input {
-    width:264px;
+    width: 264px;
   }
- 
-  .footer-from-label{
-width: auto;
+
+  .footer-from-label {
+    width: auto;
   }
 }
 
-@media screen and (min-width: 1158px){
-  .footer{
+@media screen and (min-width: 1158px) {
+  .footer {
     padding: 100px 0;
   }
-  .footer-container{
+  .footer-container {
     align-items: baseline;
     padding: 0 15px;
     flex-wrap: nowrap;
     gap: 0;
   }
-  .footer-form{
+  .footer-form {
     gap: 24px;
- 
-    
   }
-  .footer-container-logo{
+  .footer-container-logo {
     margin-right: 120px;
   }
-  .footer-text{
+  .footer-text {
     max-width: 264px;
   }
-  .footer-input-cont{
-  margin-right: 0 auto;
-  
-}
-.footer-media{
-  margin-right: auto;
-
-}
+  .footer-input-cont {
+    margin-right: 0 auto;
+  }
+  .footer-media {
+    margin-right: auto;
+  }
 }
 
 /* =====MODAL===== */
-
 
 .backdrop {
   position: fixed;
@@ -927,8 +959,8 @@ width: auto;
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), 
-  visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .is-open {
   opacity: 1;
@@ -936,7 +968,7 @@ width: auto;
   pointer-events: auto;
 }
 .modal {
-  width: 408px;
+  width: calc(100% - 32px);
   min-height: 584px;
   border-radius: 4px;
   background-color: var(--DAIRY, #fcfcfc);
@@ -945,11 +977,16 @@ width: auto;
   left: 50%;
   transform: translate(-50%, -50%);
   padding: 72px 24px 24px 24px;
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+@media screen and (min-width: 768px){
+  .modal{
+    width: 408px;
+  }
+}
 .modal-title {
-  width: 360px;
   margin-bottom: 16px;
   text-align: center;
   color: var(--NAVY-BLUE, #2e2f42);
@@ -958,6 +995,11 @@ width: auto;
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
+}
+@media screen and (min-width: 768px){
+  .modal-title{
+    width: 360px;
+  }
 }
 .modal-field {
   margin-bottom: 8px;
@@ -988,8 +1030,8 @@ width: auto;
   letter-spacing: 0.04em;
   margin-bottom: 4px;
 }
-.modal-field-textarea{
-margin-bottom: 16px;
+.modal-field-textarea {
+  margin-bottom: 16px;
 }
 .modal-textarea {
   width: 100%;
@@ -1000,13 +1042,13 @@ margin-bottom: 16px;
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
-  color: rgba(46, 47, 66, 0.4); 
+  color: rgba(46, 47, 66, 0.4);
   padding: 8px 16px;
   resize: none;
   outline: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-textarea:focus{
+.modal-textarea:focus {
   border-color: #4d5ae5;
 }
 .modal-textarea::placeholder {
@@ -1014,7 +1056,6 @@ margin-bottom: 16px;
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
-
 }
 .modal-btn {
   width: 24px;
@@ -1031,24 +1072,23 @@ margin-bottom: 16px;
   background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   border: 1px solid rgba(0, 0, 0, 0.1);
   cursor: pointer;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
-  border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-btn:hover,
-.modal-btn:focus{
-  background-color:#404BBF;
+.modal-btn:focus {
+  background-color: #404bbf;
   border: none;
 }
 
 .modal-btn-icon {
   fill: #2e2f42;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
 }
 .modal-btn:hover .modal-btn-icon,
 .modal-btn:focus .modal-btn-icon {
-    fill: #ffffff;
+  fill: #ffffff;
 }
 .modal-form-btn {
   min-width: 169px;
@@ -1067,11 +1107,11 @@ margin-bottom: 16px;
   background: var(--IRIS, #4d5ae5);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   border: none;
-  
+
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-form-btn:hover,
-.modal-form-btn:focus{
+.modal-form-btn:focus {
   background-color: #404bbf;
 }
 
@@ -1086,42 +1126,49 @@ margin-bottom: 16px;
 .input-wrap {
   position: relative;
 }
-.checkbox-modal{
+.checkbox-modal {
   margin-bottom: 24px;
 }
-.check-text{
-  color: var(--LIGHT-SLATE, #8E8F99);
-font-size: 12px;
-line-height: 1.17;
-letter-spacing: 0.04em;
-align-items: center;
-
+.check-text {
+  color: var(--LIGHT-SLATE, #8e8f99);
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  align-items: center;
 }
-.checkbox-link{
+.checkbox-link {
   color: #4d5ae5;
 }
-.icon-checkbox{
+.icon-checkbox {
   display: inline-flex;
   width: 16px;
   height: 16px;
   fill: transparent;
   border-radius: 2px;
-  border: 1px solid var(--NAVY-BLUE-modal, rgba(46, 47, 66, 0.40));
+  border: 1px solid var(--NAVY-BLUE-modal, rgba(46, 47, 66, 0.4));
   margin-right: 8px;
+  margin-bottom:;
   align-items: center;
   justify-content: center;
-  transition:
-  background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-  fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), 
-  fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.modal-check:checked + .check-text> .icon-checkbox{
- background-color:  #404BBF;
- border: none;
-fill: #F4F4FD;
+.privacy-text{
+  color: var(--LIGHT-SLATE, #8e8f99);
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  align-items: left;
+ 
 }
-.modal-check:focus + .check-text> .icon-checkbox {
-  border-color: #404BBF;
+.modal-check:checked + .check-text > .icon-checkbox {
+  background-color: #404bbf;
+  border: none;
+  fill: #f4f4fd;
+}
+.modal-check:focus + .check-text > .icon-checkbox {
+  border-color: #404bbf;
 }
